# excel_audit

./: .gitignore  LICENSE  README.md  app.py  color.py  edit.py  formatter.py  input.json  logic.py  main.py  main_gui.py  pyproject.toml
.github/workflows/: build.yml
