[project]
name = "audit"
version = "0.1.0"
authors = [
    { name = "Akshith Vuppala", email = "akhirangoli@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "pyinstaller>=6.19.0",
    "pyside6>=6.10.2",
]
